# neuron

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Install-dependencies.md  Install-dependent-libraries.md  README-CN.md  README.md  codecov.yaml  create_cov_report.sh  debian.copyright  default_plugin.json  default_plugins.json  dev.conf  generate_rsa_keypair.sh  install-libs.sh  install.sh  install_dependencies.sh  jwt_encode.py  migrate.py  neuron-helper.sh  neuron.conf  neuron.json  neuron.yaml  package-sdk.sh  package.sh  plugin_param.json  plugin_param_schema.json  plugin_param_schema_test.json  private.key  public.pem  pytest_start.sh  sdk-install.sh  sdk-zlog.conf  sdk.sh  version  version.h.in  zlog.conf
.github/: ISSUE_TEMPLATE.md  SECURITY.md
cmake/: aarch64-linux-gnu.cmake  arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  cross.cmake  neuron-config.cmake  neuron-version.cmake  x86_64-linux-gnu.cmake
ft/: README.md  api.resource  api.robot  api_http.resource  api_mqtt.resource  common copy.resource  (+31 more)
plugins/datalayers/: CMakeLists.txt  datalayers.json  datalayers_config.c  datalayers_config.h  datalayers_handle.c  datalayers_handle.h  datalayers_plugin.c  datalayers_plugin.h  datalayers_plugin_intf.c  datalayers_plugin_intf.h  datastorage.json
plugins/ekuiper/: CMakeLists.txt  ekuiper.json  json_rw.c  json_rw.h  plugin_ekuiper.c  plugin_ekuiper.h  read_write.c  read_write.h
plugins/file/: CMakeLists.txt  file.json  file_plugin.c  file_req.c  file_req.h
plugins/kafka/: CMakeLists.txt  kafka.json  kafka_config.c  kafka_config.h  kafka_handle.c  kafka_handle.h  kafka_plugin.c  kafka_plugin.h  kafka_plugin_intf.c  kafka_plugin_intf.h
plugins/modbus/: CMakeLists.txt  modbus-qh-tcp.json  modbus-rtu.json  modbus-tcp-community.json  modbus-tcp.json  modbus.c  modbus.h  modbus_point.c  modbus_point.h  modbus_qh_tcp.c  modbus_req.c  modbus_req.h  modbus_rtu.c  modbus_rtu_over_tcp.c  modbus_stack.c  modbus_stack.h  modbus_tcp.c
plugins/monitor/: CMakeLists.txt  metric_handle.c  metric_handle.h  monitor.c  monitor.h  monitor.json  monitor_config.c  monitor_config.h  mqtt_handle.c  mqtt_handle.h
plugins/mqtt/: CMakeLists.txt  aws-iot.json  aws_iot_plugin.c  azure-iot.json  azure_iot_plugin.c  command_datatag.c  command_datatag.h  command_group_config.c  command_group_config.h  command_node.c  command_rw.c  command_rw.h  common.c  common.h  message_handle.c  message_handle.h  mqtt.c  mqtt.h  mqtt.json  mqtt_c_client.c  mqtt_c_client.h  mqtt_client.c  mqtt_client.h  mqtt_client_intf.c  mqtt_client_intf.h  mqtt_config.c  mqtt_config.h  mqtt_handle.c  mqtt_handle.h  mqtt_interface.h  mqtt_nng_client.c  mqtt_nng_client.h  mqtt_nng_util.c  mqtt_nng_util.h  mqtt_plugin.c  mqtt_plugin.h  mqtt_plugin_intf.c  mqtt_plugin_intf.h  mqtt_util.c  mqtt_util.h  (+18 more)
plugins/mqtt-xinao/: CMakeLists.txt  mqtt-xinao.json  mqtt_config.c  mqtt_handle.c  mqtt_handle.h  mqtt_plugin.c  mqtt_plugin.h  xinao.c  xinao.h
plugins/mqtt/command/: command.c  command.h  command_node.h  command_rw.c  command_rw.h  common.c  common.h  datatag.c  datatag.h  group_config.c  group_config.h  heartbeat.c  heartbeat.h  node.c  node.h  ping.c  ping.h  plugin.c  plugin.h  read_write.c  read_write.h  schema.c  schema.h  tty.c  tty.h
plugins/opcua/: CMakeLists.txt  opcua_handle.c  opcua_handle.h  open62541_client.c  open62541_client.h  open62541_option.c  open62541_option.h  open62541_util.c  open62541_util.h  open62541_utils.c  open62541_utils.h  option.c  option.h  plugin_handle.c  plugin_handle.h  plugin_opcua.c
plugins/sample/: CMakeLists.txt  plugin_sample_app.c  plugin_sample_drv.c
simulator/: CMakeLists.txt  comli_simulator.c  modbus_s.c  modbus_s.h  modbus_simulator.c  modbus_tcp_server_sim.c  modbus_tcp_simulator.c  modbus_tty_simulator.c  opcua_simulator.c  opcua_tags_add.json  otel_server.py
tests/: CMakeLists.txt  EDE_test.csv  README.md  api_json_test.cc  base64_test.cc  cache_test.cc  config_test.cc  data_val_test.cc  datatag_table_test.cc  http_test.cc  json_datatag_table_test.cc  json_group_config_test.cc  json_nodes_test.cc  json_persistence_test.cc  json_plugin_test.cc  json_rw_test.cc  json_test.cc  json_tty_test.cc  jsonx_mqtt_test.cc  jsonx_tag_test.cc  jwt_test.cc  modbus_point_test.cc  modbus_test.cc  mqtt_test.cc  opcua_test.cc  persistence_test.cc  plugin_manager_test.cc  rolling_counter_test.cc  schema_valid_test.cc  tag_group_config_test.cc  tag_sort_test.cc  uuid_test.cc  variable_test.cc
tests/ft/: conftest.py  pytest.ini  setup.py
tests/ft/app/: test_app.py  test_apps_export_import.py  test_azure.py  test_demo_app.py  test_ekuiper.py  test_kafka.py  test_mqtt.py
tests/ft/driver/: test_driver.py  test_modbus.py
tests/ft/group/: test_group.py
tests/ft/http_api/: test_http_api.py  test_read_paginate.py
tests/ft/log/: test_log.py
tests/ft/login/: neuron.json  sub_filter_error.json  test_launch.py  test_login.py
tests/ft/metrics/: test_metrics.py
tests/ft/modbus/: test_modbus_tcp.py
tests/ft/neuron/: api.py  common.py  config.py  error.py  process.py
tests/ft/neuron/data/: __init__.py  client.pem  server.key
tests/ft/neuron/mqtt/: __init__.py  broker.pem  broker.py  ca.pem  client.key  client.py
tests/ft/node/: test_node.py
tests/ft/persist/: test_persist.py
tests/ft/plugin/: plugin_data1.txt  plugin_data2.txt  test_library_data.json  test_plugin.py
tests/ft/simulator/: test_simulator.py
tests/ft/tag/: __init__.py  modbus-tcp.json  test_tag.py
tests/plugins/: CMakeLists.txt
tests/plugins/c1/: CMakeLists.txt  c1.c  c1_2.c  c1_2_v_err.c  c1_v_err.c
tests/plugins/demo_app/: CMakeLists.txt  demo_app_plugin.c  demo_app_plugin.h
tests/plugins/mqtt/: CMakeLists.txt  paho_client_test.cc
tests/plugins/s1/: CMakeLists.txt  s1.c  s1.json  s1_2.c
tests/plugins/sc1/: CMakeLists.txt  sc1.c  sc1.h  sc1_2.c
tests/ut/: A7502.tpy  CMakeLists.txt  README.md  VarTypes_Sample.tpy  async_queue_test.cc  base64_test.cc  cid_test.cc  common_test.cc  ede_test.cc  http_test.cc  json_test.cc  jwt_test.cc  mqtt_client_test.cc  mqtt_schema_test.cc
(+711 files in other folders)
